# agent_mcp_sandbox

./: .env  README.md  agent.py  agent_llamafirewall.py  benchmark.py  benchmark_llamafirewall.py  metrics.py  pyproject.toml  visualize.py  visualize_firewall_overhead.py
benchmark_data/: file_002.txt
logs/: firewall_llama_True_profile_cvm_deberta.json  firewall_llama_True_profile_cvm_llm.json  profile_cvm.json  profile_std.json
vllm_install/: build_vllm_cpu.md  requirements-cpu.txt
